discussion/kv_engine/182014/182014_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[BP] MB-48759: End legacy DCP stream if there are no items in range [1/2]

Note this patch is only concerned with ending a DCP stream if items are
not found perform a backfill and does not try attempt to fix streaming
from memory.

Currently if a legacy DCP stream sets a stream range from X to Y and
there are no items within this range for the default collection we
won't end the stream. We need to do this as we can't just send a
SnapshotMarker op, then a SeqnoAdvanced op to take us the end of the
stream. As legacy DCP clients won't be aware of SeqnoAdvanced ops.

To fix this, when we find no visible items in the default collection
during DCPBackfillBySeqnoDisk::markLegacyDiskSnapshot(). Check to see if
there are any mutations for the Default collection that are within the
stream's range but are not within the backfill range. If no then we're
observed all the mutations we need to and found nothing. So we need to
end the stream without sending any mutations to the client.

Change-Id: Idbe2062bc5f17fe39d9011ac7edf6b11e82a1d7c
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/163299
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>
(cherry picked from commit febb23952989252538c1537d2bb9e50e74a02cc7)

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-06 21:35:29.000000000
Message: 
Patch Set 1: Cherry Picked from branch master.

The following files contain Git conflicts:
* engines/ep/src/dcp/backfill_by_seqno_disk.cc
* engines/ep/tests/module_tests/collections/evp_store_collections_legacy_dcp_tests.cc
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-06 21:35:41.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/323412/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-06 21:39:09.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/362/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/dcp/backfill_by_seqno_disk.cc:13:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD   (0427d5 MB-50425: Merge remote-tracking branch "mad-hatter" into che)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/dcp/backfill_by_seqno_disk.cc:391:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD   (0427d5 MB-50425: Merge remote-tracking branch "mad-hatter" into che)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/dcp/backfill_by_seqno_disk.cc:550:9: error: use of undeclared identifier "endStreamIfNeeded" [clang-diagnostic-error]
        endStreamIfNeeded();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_legacy_dcp_tests.cc:320:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD   (0427d5 MB-50425: Merge remote-tracking branch "mad-hatter" into che)
^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/362/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/dcp/backfill_by_seqno_disk.cc:13:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/362/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20975/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-11-07 11:19:22.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
